ISSUE-598: Fix SR to run on Java 11.
* Used G1GC instead of parallel GC.
* Included JAXB-API and it's runtime jars to run the JDK8 compiled build on JRE11.